@@ -11,6 +11,13 @@ $properties = array(
         'value' => true,
     ),
     array(
+        'name' => 'cacheTV',
+        'desc' => 'Cache all Resources that have a non-empty value in the Template Variable specified by name. This overrides all other options; leave empty to use other options.',
+        'type' => 'textfield',
+        'options' => '',
+        'value' => '',
+    ),
+    array(
         'name' => 'skipTV',
         'desc' => 'Skip Resources that have a non-empty value in the Template Variable specified by name. Leave empty to only skip non-cacheable Resources.',
         'type' => 'textfield',
