@@ -14,22 +14,28 @@ switch ($modx->event->name) {
     case 'OnBeforeSaveWebPageCache':
         /* Write a static version of the file before caching it in MODX */
         if ($modx->resource->get('cacheable') && $modx->resource->get('published') && $modx->resource->_output != '') {
-            /* optionally skip binary content types */
-            if (!empty($skipBinaryContentTypes) && $modx->resource->ContentType->get('binary')) break;
-            /* skip Resources with a non-empty value for the specified TV */
-            if (!empty($skipTV) && $modx->resource->getTVValue($skipTV)) break;
-            /* do not cache if the cacheable content still contains unprocessed tags */
-            $matches = array();
-            if (!empty($skipIfTagsRemain) && $modx->parser->collectElementTags($modx->resource->_content, $matches)) break;
-            /* if specified, limit caching by mime-type */
-            if (!empty($mimeTypes)) {
-                $validMimeTypes = array_walk(explode(',', strtolower($mimeTypes)), 'trim');
-                if (!in_array(strtolower($modx->resource->ContentType->get('mime_type')), $validMimeTypes)) break;
-            }
-            /* if specified, limit caching by ContentTypes */
-            if (!empty($contentTypes)) {
-                $validContentTypes = array_walk(explode(',', $contentTypes), 'trim');
-                if (!in_array($modx->resource->ContentType->get('id'), $validContentTypes)) break;
+            /* force caching of Resources with a value of '1' for a specified cacheTV */
+            $forced = !empty($cacheTV);
+            if (!$forced) {
+                /* optionally skip binary content types */
+                if (!empty($skipBinaryContentTypes) && $modx->resource->ContentType->get('binary')) break;
+                /* do not cache if the cacheable content still contains unprocessed tags */
+                /* skip Resources with a non-empty value for the specified TV */
+                if (!empty($skipTV) && $modx->resource->getTVValue($skipTV)) break;
+                $matches = array();
+                if (!empty($skipIfTagsRemain) && $modx->parser->collectElementTags($modx->resource->_content, $matches)) break;
+                /* if specified, limit caching by mime-type */
+                if (!empty($mimeTypes)) {
+                    $validMimeTypes = array_walk(explode(',', strtolower($mimeTypes)), 'trim');
+                    if (!in_array(strtolower($modx->resource->ContentType->get('mime_type')), $validMimeTypes)) break;
+                }
+                /* if specified, limit caching by ContentTypes */
+                if (!empty($contentTypes)) {
+                    $validContentTypes = array_walk(explode(',', $contentTypes), 'trim');
+                    if (!in_array($modx->resource->ContentType->get('id'), $validContentTypes)) break;
+                }
+            } elseif ($modx->resource->getTVValue($cacheTV) !== '1') {
+                break;
             }
             /* build the path/filename for writing the static representation */
             $statcacheFile = $modx->getOption('statcache_path', $scriptProperties, MODX_BASE_PATH . 'statcache');
